# secscan

./: .gitignore  README.md  debug_report.py  debug_scan.py  pyproject.toml  run_servers.sh
apps/api/: __init__.py  main.py
apps/cli/: __init__.py  main.py
apps/web/: package-lock.json  package.json
apps/web/src/: App.jsx  i18n.jsx  index.css
apps/worker/: __init__.py
configs/: default.yaml
tests/: test_regressions.py
